fix container cropping tabs on mobile

--- a/src/components/sections/home/fast-and-secure/fast-and-secure.module.scss
+++ b/src/components/sections/home/fast-and-secure/fast-and-secure.module.scss
@@ -8,6 +8,12 @@
     margin-top: 48px;
   }
 
+  .tabs-list {
+    > button:last-child {
+      margin-right: var(--padding);
+    }
+  }
+
   .content {
     display: none;
 
